--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 
 *, *::before, *::after{
     box-sizing: border-box;
+    border: 1px solid black;
 }
 
 body{
@@ -35,7 +36,6 @@ header{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    min-width: 600px;
     position: fixed;
 }
 #navbar{
@@ -105,12 +105,11 @@ nav ul li:hover{
 
 }
 #projects h2{
-    width: 630px;
+    width: 100%;
     margin: 6rem auto 3rem;
     border-bottom: 3px solid white;
     font-size: 2.5rem;
     text-align: center;
-    white-space: nowrap;
 }
 .project-tile{
     display: grid;
@@ -171,9 +170,10 @@ img{
 }
 
 .work-together h1{
+
     font-size: 4rem;
-    width: fixed;
-    white-space: nowrap;
+    width: 100%;
+    text-align: center;
 }
 .work-together .first{
     color: white;
@@ -199,14 +199,7 @@ a{
     color: inherit;
     
 }
-i, p{
-    display: inline-block;
-    white-space: nowrap;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Poppins', sans-serif;
-    
-}
+
 i{
     margin-right: 0.5rem
 }
@@ -220,7 +213,7 @@ footer{
     }
 .fake-portfolio{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     font-family: 'Poppins', sans-serif;
     margin-left: auto;
     margin-right: auto;
